base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argoStudy-deployment
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: argoStudy
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: argoStudy
    spec:
      containers:
        - image: moony1204/argoStudy
          imagePullPolicy: Always
          name: argoStudy
          ports:
            - containerPort: 80
